Moved images to a folder and updtaed the images path in CSS

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="box">
                 <div class="content">
                     <h2>Get your Game on</h2>
-                    <div class="b1-img" style="background-image: url('box1.jpg');"></div>
+                    <div class="b1-img" style="background-image: url(/images/box1.jpg);"></div>
                     <p>Shop gaming</p>
                 </div>
             </div> 
@@ -102,21 +102,21 @@
                     <h2>Shop for your home essentials</h2>
                     <div class="sub-rw1">
                         <div class="cell1">
-                            <div class="b2-img" style="background-image: url(/box2.1.jpg);"></div>
+                            <div class="b2-img" style="background-image: url(/images/box2.1.jpg);"></div>
                             <p class="imginfo">Cleaning tools</p>
                         </div>
                         <div class="cell2">
-                            <div class="b2-img" style="background-image: url(/box2.2.jpg);"></div>
+                            <div class="b2-img" style="background-image: url(/images/box2.2.jpg);"></div>
                             <p class="imginfo">Home Storage</p>
                         </div>
                     </div>
                     <div class="sub-rw2">
                         <div class="cell1">
-                            <div class="b2-img" style="background-image: url(/box2.3.jpg);"></div>
+                            <div class="b2-img" style="background-image: url(/images/box2.3.jpg);"></div>
                             <p class="imginfo">Home Decor</p>
                         </div>
                         <div class="cell2">
-                            <div class="b2-img" style="background-image: url(/box2.4.jpg);"></div>
+                            <div class="b2-img" style="background-image: url(/images/box2.4.jpg);"></div>
                             <p class="imginfo">Bedding</p>
                         </div>
                     </div>
@@ -128,21 +128,21 @@
                     <h2>Top categories in Kitchen appliances</h2>
                     <div class="sub-rw1">
                         <div class="cell11">
-                            <div class="b2-img" style="background-image: url(/box3.jpg);"></div>
+                            <div class="b2-img" style="background-image: url(/images/box3.jpg);"></div>
                             <p class="imginfo">Cleaning tools</p>
                         </div>
                     </div>
                     <div class="sub-rw2">
                         <div class="cell21">
-                            <div class="b2-img" style="background-image: url(/box3.2.jpg);"></div>
+                            <div class="b2-img" style="background-image: url(/images/box3.2.jpg);"></div>
                             <p class="imginfo">Home Decor</p>
                         </div>
                         <div class="cell22">
-                            <div class="b2-img" style="background-image: url(/box3.3.jpg);"></div>
+                            <div class="b2-img" style="background-image: url(/images/box3.3.jpg);"></div>
                             <p class="imginfo">Bedding</p>
                         </div>
                         <div class="cell23">
-                            <div class="b2-img" style="background-image: url(/box\ 3.4.jpg);"></div>
+                            <div class="b2-img" style="background-image: url(/images/box\ 3.4.jpg);"></div>
                             <p class="imginfo">Bedding</p>
                         </div>
                     </div>
@@ -154,21 +154,21 @@
                     <h2>Shop Fashion for less</h2>
                         <div class="sub-rw1">
                             <div class="cell1">
-                                <div class="b2-img" style="background-image: url(/box\ 4.1.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box\ 4.1.jpg);"></div>
                                 <p class="imginfo">Jeans under $50</p>
                             </div>
                             <div class="cell2">
-                                <div class="b2-img" style="background-image: url(/box\ 4.2.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box\ 4.2.jpg);"></div>
                                 <p class="imginfo">Top under $25</p>
                             </div>
                         </div>
                         <div class="sub-rw2">
                             <div class="cell1">
-                                <div class="b2-img" style="background-image: url(/box\ 4.3.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box\ 4.3.jpg);"></div>
                                 <p class="imginfo">Dresses under $30</p>
                             </div>
                             <div class="cell2">
-                                <div class="b2-img" style="background-image: url(/box\ 4.4.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box\ 4.4.jpg);"></div>
                                 <p class="imginfo">Shoes under $50</p>
                             </div>
                         </div>
@@ -183,21 +183,21 @@
                     <h2>New home arrivals under $50</h2>
                         <div class="sub-rw1">
                             <div class="cell1">
-                                <div class="b2-img" style="background-image: url(/box\ 5.1.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box\ 5.1.jpg);"></div>
                                 <p class="imginfo">Kitchen and Dining</p>
                             </div>
                             <div class="cell2">
-                                <div class="b2-img" style="background-image: url(/box\ 5.2.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box\ 5.2.jpg);"></div>
                                 <p class="imginfo">Home improvement</p>
                             </div>
                         </div>
                         <div class="sub-rw2">
                             <div class="cell1">
-                                <div class="b2-img" style="background-image: url(/box\ 5.3.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box\ 5.3.jpg);"></div>
                                 <p class="imginfo">Decor</p>
                             </div>
                             <div class="cell2">
-                                <div class="b2-img" style="background-image: url(/box\ 5.4.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box\ 5.4.jpg);"></div>
                                 <p class="imginfo">Bedding & Bath </p>
                             </div>
                         </div>
@@ -208,14 +208,14 @@
             <div class="box">
                 <div class="content">
                     <h2>Toys Under $25</h2>
-                    <div class="b1-img" style="background-image: url(/box\ 6.jpg);"></div>
+                    <div class="b1-img" style="background-image: url(/images/box\ 6.jpg);"></div>
                     <p>Shop now</p>
                 </div>
             </div>
             <div class="box">
                 <div class="content">
                     <h2>Gifts for Dad under $25</h2>
-                    <div class="b1-img" style="background-image: url(/box\ 7.jpg);"></div>
+                    <div class="b1-img" style="background-image: url(/images/box\ 7.jpg);"></div>
                     <p>See all details</p>
                 </div>
             </div>
@@ -224,21 +224,21 @@
                     <h2>Refresh your space</h2>
                         <div class="sub-rw1">
                             <div class="cell1">
-                                <div class="b2-img" style="background-image: url(/box8.1.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box8.1.jpg);"></div>
                                 <p class="imginfo">Dining</p>
                             </div>
                             <div class="cell2">
-                                <div class="b2-img" style="background-image: url(/box8.2.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box8.2.jpg);"></div>
                                 <p class="imginfo">Home</p>
                             </div>
                         </div>
                         <div class="sub-rw2">
                             <div class="cell1">
-                                <div class="b2-img" style="background-image: url(/box\ 8.3.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box\ 8.3.jpg);"></div>
                                 <p class="imginfo">Kitchen</p>
                             </div>
                             <div class="cell2">
-                                <div class="b2-img" style="background-image: url(/box\ 8.4.jpg);"></div>
+                                <div class="b2-img" style="background-image: url(/images/box\ 8.4.jpg);"></div>
                                 <p class="imginfo">Health and Beauty</p>
                             </div>
                         </div>
@@ -295,7 +295,7 @@
         </div>
 
         <div class="foot-blk3">
-            <img src="/Amazon-Logo4-removebg-preview.png">
+            <img src="/images/Amazon-Logo4-removebg-preview.png">
             <div class="footer-lang">
                 <i class="fa-solid fa-globe"></i>
                 <p>English</p>
